src/components/layout.css
/* ... */
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner,
button::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring,
button:-moz-focusring {
  /* NOTE: This doesn't look right */
  outline: 1px dotted ButtonText;
}

button:active {
  transform: translateY(2px);
}

fieldset {
  border: 1px solid silver;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}
legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}
textarea {
  overflow: auto;
}
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}
[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}
[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}
[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

input,
select,
button {
  transition: 0.3s all;
}

input {
  border: 1px solid white;
}

select {
  min-height: 37px;
  background: white;
}

code {
  font-family: Consolas, monospace;
  font-variant-ligatures: none;
  -webkit-overflow-scrolling: touch;
}

textarea {
  margin-bottom: 20px;
  display: block;
  width: calc(100% - 5px);
  height: 70px;
  border: none;
  border-radius: 4px;
  padding: 10px;
  box-sizing: border-box;
  font-size: 16px;
}

select:hover,
textarea:hover,
input:hover {
  border: 1px solid var(--color-light-pink);
}

input[type="submit"]:hover {
  background: var(--color-secondary);
}

input[type="button"]:active,
input[type="submit"]:active {
  transition: 0.3s all;
  transform: translateY(3px);
  border: 1px solid transparent;
  opacity: 0.8;
}

input[type="button"]:hover {
  transition: 0.3s all;
}

input[type="button"],
input[type="submit"] {
  -webkit-appearance: none;
}

pre,
code {
  overflow-x: auto;
  overflow-y: hidden;
  white-space: pre-wrap;
  word-wrap: break-word;
  line-height: 1.3;
}

blockquote {
  border-left: 10px solid #516391;
  padding-left: 20px;
  margin-left: 20px;
  font-size: 16px;
}

th {
  font-size: 0.8rem;
  text-align: left;
}

td {
  vertical-align: top;
}

h2 {
  font-weight: 500;
  font-size: 1.2rem;
}

label,
table {
  font-size: 0.9rem;
}

.editPage,
.scrollToTop,
.scrollToTop:focus {
  border: 1px solid var(--color-light-grey);
}

.scrollToTop,
.editPage {
  display: none;
}

.editPage:hover,
.scrollToTop:hover {
  border-color: var(--color-secondary);
  cursor: pointer;
}

.desktopOnly {
  display: none !important;
}

a.active {
  background: var(--color-primary);
  border-bottom: 1px solid var(--color-secondary) !important;
}

@media (min-width: 768px) {
  pre {
    -webkit-overflow-scrolling: touch;
    -moz-overflow-scrolling: touch;
  }

  ::-webkit-scrollbar {
    height: 8px;
  }

  ::-webkit-scrollbar-track {
    background: #191d3a;
    border-radius: 10px;
  }

  ::-webkit-scrollbar-thumb {
    background: #4f6294;
    border-radius: 10px;
  }

  ::-webkit-scrollbar-thumb:hover {
    background: var(--color-light-pink);
  }

  .editPage,
  .scrollToTop {
    display: block;
    background: var(--color-primary);
    position: fixed;
    right: 30px;
    color: white;
    bottom: 60px;
    height: 35px;
    width: 35px;
    z-index: 10;
    padding-left: 0;
    padding-right: 0;
  }

  .scrollToTop,
  .editPage {
    display: block;
  }
}

.editPage {
  text-align: center;
  font-weight: 500;
  bottom: 105px;
  font-size: 10px;
  text-decoration: none;
  line-height: 3;
}

.editPage:hover {
  color: white;
}

@media (min-width: 1040px) {
  .desktopOnly {
    display: inline-block !important;
  }

  a.active {
    background: none;
  }

  .editPage {
    bottom: 75px;
  }

  .scrollToTop {
    bottom: 30px;
  }
}

a.skip-main {
  top: 70px;
  left: -999px;
  position: absolute;
  width: 110px;
  overflow: hidden;
  z-index: -999;
}
a.skip-main:focus,
a.skip-main:active {
  top: 70px;
  width: 110px;
  left: 50px;
  height: auto;
  overflow: auto;
  font-size: 15px;
  z-index: 999;
}

.more.icon {
  color: #fff;
  position: absolute;
  margin-left: 0;
  margin-top: 9px;
  width: 2px;
  height: 2px;
  border-radius: 50%;
  border: solid 1px currentColor;
}

.more.icon:before {
  content: "";
  position: absolute;
  top: -1px;
  left: -8px;
  width: 2px;
  height: 2px;
  border-radius: 50%;
  border: solid 1px currentColor;
}

.more.icon:after {
  content: "";
  position: absolute;
  top: -1px;
  left: 6px;
  width: 2px;
  height: 2px;
  border-radius: 50%;
  border: solid 1px currentColor;
}

.flag.icon {
  color: #fff;
  position: absolute;
  margin-left: 3px;
  margin-top: 4px;
  width: 9px;
  height: 6px;
  border-radius: 1px;
  border: solid 1px currentColor;
}

.flag.icon:before {
  content: "";
  position: absolute;
  left: -3px;
  top: -2px;
  width: 1px;
  height: 15px;
  background-color: currentColor;
}

.keyboard.icon {
  color: #fff;
  position: absolute;
  margin-left: 1px;
  margin-top: 4px;
  width: 17px;
  height: 11px;
  border-radius: 1px;
  border: solid 1px currentColor;
}

.keyboard.icon:before {
  content: "";
  position: absolute;
  left: 7px;
  top: 3px;
  width: 1px;
  height: 1px;
  border: 1px solid transparent;
  box-shadow:
    -2px 0 0 -1px currentColor,
    2px 0 0 -1px currentColor,
    0 -2px 0 -1px currentColor,
    0 2px 0 -1px currentColor,
    -6px 0 0 -1px currentColor,
    6px 0 0 -1px currentColor,
    -4px -2px 0 -1px currentColor,
    -4px 2px 0 -1px currentColor,
    4px -2px 0 -1px currentColor,
    4px 2px 0 -1px currentColor;
}

.keyboard.icon:after {
  content: "";
  position: absolute;
  bottom: 1px;
  left: 3px;
  width: 9px;
  height: 1px;
  background-color: currentColor;
}
/* ... */

